--- a/tdc.html
+++ b/tdc.html
@@ -85,8 +85,8 @@
     />
 
     <!-- Project code -->
-    <link rel="stylesheet" href="tdc.css" />
-    <script src="tdc.js"></script>
+    <link rel="stylesheet" href="./tdc.css" />
+    <script src="./tdc.js"></script>
     <!-- fontawesome -->
     <link
       rel="stylesheet"
