Overview page edits
fixed spacing in columns
added extra placeholders in 2nd and 3rd columns
fixed typo

--- a/tdc.html
+++ b/tdc.html
@@ -292,11 +292,11 @@
                           <div class="with-title qvplaceholder" id="QV-6"></div>
                         </div>
                       </div>
-                      <div class="row" style="height: 445px; padding: 0px 16px">
-                        <div class="col-xs-6" style="height: 50%; padding: 0px">
+                      <div class="row" style="height: 400px; padding: 0px 16px">
+                        <div class="col-xs-6" style="height: 200px; padding: 0px">
                           <div
                             class="row"
-                            style="height: 10%; padding: 0px 16px"
+                            style="padding: 0px 16px"
                           >
                             <div class="col-xs-12 title">
                               Entering &amp; Leaving
@@ -304,7 +304,7 @@
                           </div>
                           <div
                             class="row"
-                            style="height: 90%; padding: 0px 16px"
+                            style="height: 160px; padding: 0px 16px"
                           >
                             <div
                               class="with-title qvplaceholder"
@@ -312,16 +312,16 @@
                             ></div>
                           </div>
                         </div>
-                        <div class="col-xs-6" style="height: 50%; padding: 0px">
+                        <div class="col-xs-6" style="height: 200px; padding: 0px">
                           <div
                             class="row"
-                            style="height: 10%; padding: 0px 16px"
+                            style="padding: 0px 16px"
                           >
                             <div class="col-xs-12 title">Local Taxis</div>
                           </div>
                           <div
                             class="row"
-                            style="height: 90%; padding: 0px 16px"
+                            style="height: 160px; padding: 0px 16px"
                           >
                             <div
                               class="with-title qvplaceholder"
@@ -329,19 +329,18 @@
                             ></div>
                           </div>
                         </div>
-                        <div
-                          class="col-xs-6"
-                          style="height: 150px; padding: 0px"
+                        <div class="col-xs-6" style="height: 200px; padding: 0px"
                         >
                           <div
                             class="row"
-                            style="height: 10%; padding: 0px 16px"
+                            style="padding: 0px 16px"
+
                           >
                             <div class="col-xs-12 title">Visitor Hubs</div>
                           </div>
                           <div
                             class="row"
-                            style="height: 90%; padding: 0px 16px"
+                            style="height: 160px; padding: 0px 16px"
                           >
                             <div
                               class="with-title qvplaceholder"
@@ -349,19 +348,17 @@
                             ></div>
                           </div>
                         </div>
-                        <div
-                          class="col-xs-6"
-                          style="height: 150px; padding: 0px"
+                        <div class="col-xs-6" style="height: 200px; padding: 0px"
                         >
                           <div
                             class="row"
-                            style="height: 10%; padding: 0px 16px"
+                            style="padding: 0px 16px"
                           >
                             <div class="col-xs-12 title">Saudi Hospitality</div>
                           </div>
                           <div
                             class="row"
-                            style="height: 90%; padding: 0px 16px"
+                            style="height: 160px; padding: 0px 16px"
                           >
                             <div
                               class="with-title qvplaceholder"
@@ -376,7 +373,7 @@
                   <div class="col-xs-12 col-sm-4">
                     <qliksense-card content-height="580px">
                       <div class="card-title qvt-visualization-title">
-                        Recomendation (NPS)
+                        Recommendation (NPS)
                       </div>
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div
@@ -401,18 +398,34 @@
                       <div class="row" style="height: 180px; padding: 0px 16px">
                         <div
                           class="col-xs-12 title"
-                          style="height: 10%; padding: 0px 16px"
                         >
                           By Visitor Profiles
                         </div>
                         <div
                           class="col-xs-12"
-                          style="height: 90%; padding: 0px"
+                          style="height: 140px; padding: 0px"
                         >
-                          <div
+                        <div class="row">
+                          <div class="col-xs-12"
+                          style="height:100px"
+                          >
+                            <div
                             class="with-title qvplaceholder"
-                            id="QV-13"
+                            id="QV-13-0"
                           ></div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-xs-12"
+                          style="height:40px"
+                          >
+                            <div
+                            class="with-title qvplaceholder"
+                            id="QV-13-1"
+                          ></div>
+                          </div>
+                        </div>
+                          
                         </div>
                       </div>
                       <div class="row" style="height: 250px; padding: 0px 16px">
@@ -498,18 +511,34 @@
                       <div class="row" style="height: 180px; padding: 0px 16px">
                         <div
                           class="col-xs-12 title"
-                          style="height: 10%; padding: 0px 16px"
                         >
                           By Visitor Profiles
                         </div>
                         <div
                           class="col-xs-12"
-                          style="height: 90%; padding: 0px"
+                          style="height: 140px; padding: 0px"
                         >
+                        <div class="row">
+                          <div class="col-xs-12"
+                          style="height:100px"
+                          >
                           <div
-                            class="with-title qvplaceholder"
+                            class="qvplaceholder"
                             id="QV-18"
                           ></div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-xs-12"
+                          style="height:40px"
+                          >
+                          <div
+                            class="qvplaceholder"
+                            id="QV-18-1"
+                          ></div>
+                          </div>
+                        </div>
+
                         </div>
                       </div>
                       <div class="row" style="height: 250px; padding: 0px 16px">
