--- a/tdc.html
+++ b/tdc.html
@@ -176,7 +176,7 @@
                 <!-- A .qvplaceholder will become a droppable area in the dev-hub -->
                 <!-- Each .qvplaceholder must have a unique id -->
                 <!-- These .qvplaceholder objects below have an extra class, .kpi, which applies some simple styles intended for kpi objects -->
-                <div class="row" style="height: 65px; width: 100%">
+                <div class="row" style="height: 45px; width: 100%">
                   <div class="col-xs-3" style="height: 100%">
                     <div id="QV-1" class="with-title qvobject" style="width: 100%; height: 100%"></div>
                   </div>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="row">
                   <div class="col-xs-12 col-sm-4">
-                    <qliksense-card content-height="580px">
+                    <qliksense-card content-height="600px">
                       <div class="card-title qvt-visualization-title">
                         Visitor Satisfaction
                       </div>
@@ -204,12 +204,12 @@
                           <div class="with-title qvplaceholder" id="QV-6"></div>
                         </div>
                       </div>
-                      <div class="row" style="height: 400px; padding: 0px 16px">
+                      <div class="row" style="height: 450px; padding: 0px 16px">
                         <div class="col-xs-12">
                           <div class="row">
-                            <div class="col-xs-6 topLeftKPI" style="height: 200px; padding: 0px">
+                            <div class="col-xs-6 topLeftKPI" style="height: 225px; max-height: 225px; padding: 0px">
                               <div class="row" style="padding: 0px 16px">
-                                <div class="col-xs-12 title">
+                                <div class="col-xs-12 inner-title">
                                   Entering &amp; Leaving
                                 </div>
                                 <div class="col-xs-12 sub-title">
@@ -220,17 +220,17 @@
                                 <div class="col-xs-12" style="height: 60px; padding: 0px">
                                   <div class="qvplaceholder" id="QV-7"></div>
                                 </div>
-                               <!-- <div class="col-xs-12 sub-title">
+                               <div class="col-xs-12 sub-title">
                                   Split of Airports by satisfaction scores of International Visitors
-                                </div>-->
+                                </div>
                               </div>
                               <div class="row" style="height: 100px; padding: 0px 16px">
                                 <div class="qvplaceholder" id="QV-8"></div>
                               </div>
                             </div>
-                            <div class="col-xs-6 topRightKPI" style="height: 200px; padding: 0px">
+                            <div class="col-xs-6 topRightKPI" style="height: 225px; max-height: 225px; padding: 0px">
                               <div class="row" style="padding: 0px 16px">
-                                <div class="col-xs-12 title">Local Taxis</div>
+                                <div class="col-xs-12 inner-title">Local Taxis</div>
                                 <div class="col-xs-12 sub-title">
                                   Satisfaction of International Visitors
                                 </div>
@@ -239,9 +239,9 @@
                                 <div class="col-xs-12" style="height: 60px; padding: 0px">
                                   <div class="qvplaceholder" id="QV-9"></div>
                                 </div>
-                               <!-- <div class="col-xs-12 sub-title">
+                               <div class="col-xs-12 sub-title">
                                   Split of Destinations by satisfaction scores of International Visitors
-                                </div>-->
+                                </div>
                               </div>
                               <div class="row" style="height: 100px; padding: 0px 16px">
                                 <div class="with-title qvplaceholder" id="QV-10"></div>
@@ -251,9 +251,9 @@
                           <div class="row">
                             <div class="col-xs-12">
                               <div class="row" style="padding: 0px 16px">
-                                <div class="col-xs-6 bottomLeftKPI" style="height: 200px; padding: 0px">
+                                <div class="col-xs-6 bottomLeftKPI" style="height: 225px; padding: 0px">
                                   <div class="row">
-                                    <div class="col-xs-12 title">
+                                    <div class="col-xs-12 inner-title">
                                       Visitor Hubs
                                     </div>
                                     <div class="col-xs-12 sub-title">
@@ -264,17 +264,17 @@
                                     <div class="col-xs-12" style="height: 60px; padding: 0px">
                                       <div class="qvplaceholder" id="QV-11"></div>
                                     </div>
-                                   <!-- <div class="col-xs-12 sub-title">
+                                   <div class="col-xs-12 sub-title">
                                       Split of Priority Sites meeting basic experience standard
-                                    </div>-->
+                                    </div>
                                   </div>
                                   <div class="row" style="height: 100px; padding: 0px">
                                     <div class="with-title qvplaceholder" id="QV-12"></div>
                                   </div>
                                 </div>
-                                <div class="col-xs-6 bottomRightKPI" style="height: 200px; padding: 0px">
+                                <div class="col-xs-6 bottomRightKPI" style="height: 225px; padding: 0px">
                                   <div class="row" style="padding: 0px 16px">
-                                    <div class="col-xs-12 title">
+                                    <div class="col-xs-12 inner-title">
                                       Saudi Hospitality
                                     </div>
                                     <div class="col-xs-12 sub-title">
@@ -285,9 +285,9 @@
                                     <div class="col-xs-12" style="height: 60px; padding: 0px">
                                       <div class="qvplaceholder" id="QV-13"></div>
                                     </div>
-                                   <!-- <div class="col-xs-12 sub-title">
+                                   <div class="col-xs-12 sub-title">
                                       Split of Destinations by Hafawah Index
-                                    </div>-->
+                                    </div>
                                   </div>
                                   <div class="row" style="height: 100px; padding: 0px">
                                     <div class="with-title qvplaceholder" id="QV-14"></div>
@@ -298,11 +298,11 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row"></div>
+                      <div class="row" style="height: 50px; padding: 0px 16px"></div>
                     </qliksense-card>
                   </div>
                   <div class="col-xs-12 col-sm-4">
-                    <qliksense-card content-height="580px">
+                    <qliksense-card content-height="600px">
                       <div class="card-title qvt-visualization-title">
                         Recommendation (NPS)
                       </div>
@@ -353,7 +353,7 @@
                     </qliksense-card>
                   </div>
                   <div class="col-xs-12 col-sm-4">
-                    <qliksense-card content-height="580px">
+                    <qliksense-card content-height="600px">
                       <div class="card-title qvt-visualization-title">
                         Re-Visitaion Intention
                       </div>
