--- a/tdc.html
+++ b/tdc.html
@@ -34,7 +34,8 @@
     <script src="../../resources/assets/external/requirejs/require.js"></script>
     <!-- Bootstrap js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
-
+    <!-- icons cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
@@ -198,10 +199,10 @@
                       </div>
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-5"></div>
+                          <div class="with-title qvobject" id="QV-5"></div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-6"></div>
+                          <div class="with-title qvobject" id="QV-6"></div>
                         </div>
                       </div>
                       <div class="row" style="height: 450px; padding: 0px 16px">
@@ -218,14 +219,14 @@
                               </div>
                               <div class="row">
                                 <div class="col-xs-12" style="height: 60px; padding: 0px">
-                                  <div class="qvplaceholder" id="QV-7"></div>
+                                  <div class="qvobject" id="QV-7"></div>
                                 </div>
                                <div class="col-xs-12 sub-title">
                                   Split of Airports by satisfaction scores of International Visitors
                                 </div>
                               </div>
                               <div class="row" style="height: 100px; padding: 0px 16px">
-                                <div class="qvplaceholder" id="QV-8"></div>
+                                <div class="qvobject" id="QV-8"></div>
                               </div>
                             </div>
                             <div class="col-xs-6 topRightKPI" style="height: 225px; max-height: 225px; padding: 0px">
@@ -237,14 +238,14 @@
                               </div>
                               <div class="row">
                                 <div class="col-xs-12" style="height: 60px; padding: 0px">
-                                  <div class="qvplaceholder" id="QV-9"></div>
+                                  <div class="qvobject" id="QV-9"></div>
                                 </div>
                                <div class="col-xs-12 sub-title">
                                   Split of Destinations by satisfaction scores of International Visitors
                                 </div>
                               </div>
                               <div class="row" style="height: 100px; padding: 0px 16px">
-                                <div class="with-title qvplaceholder" id="QV-10"></div>
+                                <div class="with-title qvobject" id="QV-10"></div>
                               </div>
                             </div>
                           </div>
@@ -262,14 +263,14 @@
                                   </div>
                                   <div class="row">
                                     <div class="col-xs-12" style="height: 60px; padding: 0px">
-                                      <div class="qvplaceholder" id="QV-11"></div>
+                                      <div class="qvobject" id="QV-11"></div>
                                     </div>
                                    <div class="col-xs-12 sub-title">
                                       Split of Priority Sites meeting basic experience standard
                                     </div>
                                   </div>
                                   <div class="row" style="height: 100px; padding: 0px">
-                                    <div class="with-title qvplaceholder" id="QV-12"></div>
+                                    <div class="with-title qvobject" id="QV-12"></div>
                                   </div>
                                 </div>
                                 <div class="col-xs-6 bottomRightKPI" style="height: 225px; padding: 0px">
@@ -283,14 +284,14 @@
                                   </div>
                                   <div class="row">
                                     <div class="col-xs-12" style="height: 60px; padding: 0px">
-                                      <div class="qvplaceholder" id="QV-13"></div>
+                                      <div class="qvobject" id="QV-13"></div>
                                     </div>
                                    <div class="col-xs-12 sub-title">
                                       Split of Destinations by Hafawah Index
                                     </div>
                                   </div>
                                   <div class="row" style="height: 100px; padding: 0px">
-                                    <div class="with-title qvplaceholder" id="QV-14"></div>
+                                    <div class="with-title qvobject" id="QV-14"></div>
                                   </div>
                                 </div>
                               </div>
@@ -298,7 +299,17 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 50px; padding: 0px 16px"></div>
+                      <div class="row" style="height: 50px; padding: 0px 16px">
+                        <div class='my-legend' style="padding: 0px 12px;">
+                          <div class='legend-scale'>
+                            <ul class='legend-labels'>
+                              <li><span style='background:#DA8177;'></span>Low (0 - 60%)</li>
+                              <li><span style='background:#F8C143;'></span>Mid (60-80%)</li>
+                              <li><span style='background:#9FCD63;'></span>High (>80%)</li>
+                            </ul>
+                          </div>
+                          </div>
+                      </div>
                     </qliksense-card>
                   </div>
                   <div class="col-xs-12 col-sm-4">
@@ -308,14 +319,14 @@
                       </div>
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-15"></div>
+                          <div class="with-title qvobject" id="QV-15"></div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-16"></div>
+                          <div class="with-title qvobject" id="QV-16"></div>
                         </div>
                       </div>
                       <div class="row" style="height: 180px; padding: 0px 16px">
-                        <div class="col-xs-12 title">By Visitor Profiles</div>
+                        <div class="col-xs-12 inner-title">By Visitor Profiles</div>
                         <div class="col-xs-12" style="height: 140px; padding: 0px">
                           <div class="row">
                             <div class="col-xs-12" style="height: 100px">
@@ -329,7 +340,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 250px; padding: 0px 16px">
+                      <div class="row" style="height: 270px; padding: 0px 16px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">
                           <div class="d-flex justify-content-end" style="height: 35px; text-align: center">
                             <div class="btn-group toggle" role="group" aria-label="Basic example">
@@ -349,28 +360,39 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 50px; padding: 0px 16px"></div>
+                      <div class="row" style="height: 50px; padding: 0px 16px">
+                        <div class='my-legend' style="padding: 0px 12px;">
+                          <div class='legend-scale'>
+                            <ul class='legend-labels'>
+                              <li><span style='background:#DA8177;'></span>Low (-100 - 0%)</li>
+                              <li><span style='background:#F8C143;'></span>Good (0 - 30%)</li>
+                              <li><span style='background:#9FCD63;'></span>Great (30 - 70%)</li>
+                              <li><span style='background:#5CB14D;'></span>Excelent (70 - 100%)</li>
+                            </ul>
+                          </div>
+                          </div>
+                      </div>
                     </qliksense-card>
                   </div>
                   <div class="col-xs-12 col-sm-4">
                     <qliksense-card content-height="600px">
                       <div class="card-title qvt-visualization-title">
-                        Re-Visitaion Intention
+                        Re-Visitation Intention
                       </div>
                       <div class="row" style="height: 100px; padding: 0px 16px">
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-21"></div>
+                          <div class="with-title qvobject" id="QV-21"></div>
                         </div>
                         <div class="col-xs-6" style="height: 100%; padding: 0px">
-                          <div class="with-title qvplaceholder" id="QV-22"></div>
+                          <div class="with-title qvobject" id="QV-22"></div>
                         </div>
                       </div>
                       <div class="row" style="height: 180px; padding: 0px 16px">
-                        <div class="col-xs-12 title">By Visitor Profiles</div>
+                        <div class="col-xs-12 inner-title">By Visitor Profiles</div>
                         <div class="col-xs-12" style="height: 140px; padding: 0px">
                           <div class="row">
                             <div class="col-xs-12" style="height: 100px">
-                              <div class="qvplaceholder" id="QV-23"></div>
+                              <div class="qvobject" id="QV-23"></div>
                             </div>
                           </div>
                           <div class="row">
@@ -380,7 +402,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 250px; padding: 0px 16px">
+                      <div class="row" style="height: 270px; padding: 0px 16px">
                         <div class="col-xs-12" style="height: 100%; padding: 0px">
                           <div class="d-flex justify-content-end" style="height: 35px; text-align: center">
                             <div class="btn-group toggle" role="group" aria-label="Basic example">
@@ -400,7 +422,17 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row" style="height: 50px; padding: 0px 16px"></div>
+                      <div class="row" style="height: 50px; padding: 0px 16px">
+                        <div class='my-legend' style="padding: 0px 12px;">
+                          <div class='legend-scale'>
+                            <ul class='legend-labels'>
+                              <li><span style='background:#DA8177;'></span>Low (0 - 60%)</li>
+                              <li><span style='background:#F8C143;'></span>Mid (60-80%)</li>
+                              <li><span style='background:#9FCD63;'></span>High (>80%)</li>
+                            </ul>
+                          </div>
+                          </div>
+                      </div>
                     </qliksense-card>
                   </div>
                 </div>
@@ -410,7 +442,7 @@
             <div class="paper-body">
               <div class="container-fluid">
                 <!--Filters-->
-                <div class="row" style="height: 65px; width: 100%">
+                <div class="row" style="height: 45px; width: 100%">
                   <div class="col-xs-4" style="height: 100%">
                     <div id="QV-46" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                   </div>
@@ -463,7 +495,7 @@
             <div class="paper-body">
               <div class="container-fluid">
                 <!--Filters-->
-                <div class="row" style="height: 65px; width: 100%">
+                <div class="row" style="height: 45px; width: 100%">
                   <div class="col-xs-3" style="height: 100%">
                     <div id="QV-27" class="qvplaceholder" style="width: 100%; height: 100%"></div>
                   </div>
@@ -608,8 +640,6 @@
                 </div>
               </div>
             </div>
-
-
           </iron-pages>
         </paper-drawer-panel>
       </paper-header-panel>
