overview kpi fix

--- a/tdc.html
+++ b/tdc.html
@@ -203,8 +203,8 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px; top:-18px">
-                              <div class="with-title qvobject" id="QV-5-1"></div>
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                              <div class="with-title qvplaceholder" id="QV-5-1"></div>
                             </div>
                           </div>
                         </div>
@@ -215,8 +215,8 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px; top:-18px">
-                              <div class="with-title qvobject" id="QV-6-1" style="height: 100%;"></div>
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                              <div class="with-title qvplaceholder" id="QV-6-1" style="height: 100%;"></div>
                             </div>
                           </div>
                         </div>
@@ -363,8 +363,8 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px; top:-18px">
-                              <div class="with-title qvobject" id="QV-15-1"></div>
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                              <div class="with-title qvplaceholder" id="QV-15-1"></div>
                             </div>
                           </div>
                         </div>
@@ -375,8 +375,8 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px; top:-18px">
-                              <div class="with-title qvobject" id="QV-16-1"></div>
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                              <div class="with-title qvplaceholder" id="QV-16-1"></div>
                             </div>
                           </div>
                         </div>
@@ -443,7 +443,7 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px; top:-18px">
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
                               <div class="with-title qvobject" id="QV-21-1"></div>
                             </div>
                           </div>
@@ -455,8 +455,8 @@
                             </div>
                           </div>
                           <div class="row">
-                             <div class="col-xs-12" style="height: 20px;">
-                              <div class="with-title qvobject" id="QV-22-1 top:-18px"></div>
+                             <div class="col-xs-12 sub-title" style="height: 20px; top:-18px">
+                              <div class="with-title qvplaceholder" id="QV-022"></div>
                             </div>
                           </div>
                         </div>
